# specmd

./: .markdownlint-cli2.yaml  AGENTS.md  CITATION.cff  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  lint.yml  markdownlint.yml-pause  test.yml  typecheck.yml
docs/: design.md  format.md  specmd.yml.example  translation.md
src/specmd/: __init__.py  __main__.py  _logging.py  _params.py
src/specmd/commands/: __init__.py  export.py  migrate.py  validate.py
src/specmd/generate/: __init__.py  jsondump.py  markdownlint-cli2.yaml  mkdocs.py  plantuml.py  rdf.py  singlefile.py  tex.py  webpages.py
src/specmd/generate/templates/mkdocs/: class.md.j2  datatype.md.j2  hierarchy.md.j2  individual.md.j2  namespace.md.j2  page.md.j2  property.md.j2  vocabulary.md.j2
src/specmd/generate/templates/singlefile/: class.md.j2  datatype.md.j2  individual.md.j2  namespace.md.j2  page.md.j2  property.md.j2  vocabulary.md.j2
src/specmd/generate/templates/tex/: class.tex.j2  datatype.tex.j2  individual.tex.j2  property.tex.j2  vocabulary.tex.j2
src/specmd/parse/: __init__.py  markdown.py  model.py
tests/: conftest.py  markdownlint-cli2.yaml  test_config.py  test_examples.py  test_main.py  test_markdownlint.py  test_migrate.py  test_model.py  test_parse_markdown.py  test_rdf.py  test_shacl2code.py  test_validate.py
tests/fixtures/model/: specmd.yml
tests/fixtures/model-old-format/Core/: Core.md
tests/fixtures/model-old-format/Core/Classes/: Element.md
tests/fixtures/model-old-format/Core/Properties/: seeAlso.md  spdxId.md
tests/fixtures/model-old-format/Core/Vocabularies/: HashAlgorithm.md  SupportType.md
tests/fixtures/model/Core/: Core.md
tests/fixtures/model/Core/Classes/: Agent.md  Element.md  Tool.md
tests/fixtures/model/Core/Datatypes/: SemVer.md
tests/fixtures/model/Core/Individuals/: NoneElement.md
tests/fixtures/model/Core/Properties/: name.md  spdxId.md  supportLevel.md  toolVersion.md
tests/fixtures/model/Core/Vocabularies/: HashAlgorithm.md  RelationshipType.md  SupportType.md
